adding forkd google java formatter
fix tests for ci